--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
             <h1>Example Flask App</h1>
         </header>
         <main>
+            <h2>Welcome!</h2>
             <p>Welcome to the Flask app. This is the home page. Here are a few links to example pages you might find interesting.
                 <ul>
                     <li><a href="{{ url_for('read')}}">a page that displays information pulled from a MongoDB database collection</a></li>
