--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,19 +4,23 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-<div class="outer">
-<div class="title">
-    <h1>Example Flask App</h1>
-</div>
-<div class="body">
-    <p>Edit a record in the MongoDB database collection.</p>
-    <form method="POST">
-        <p>Your name: <input type="text" id="fname" name="fname" value="{{doc.name}}"><br></p>
-        <p>Message: <input type="text" id="fmessage" name="fmessage" style="height:200px" value="{{doc.message}}"><br></p>
-        <p><a href="{{ url_for('read')}}">Cancel</a> <input type="submit" name="post-btn" value="Save"></p>
-    </form>
-</div>
-<div class="footer">The source code for this example app is available on Github.</div>
-</div>
+    <div class="container">
+        <header>
+            <h1>Example Flask App</h1>
+        </header>
+        <main>
+            <h2>Update</h2>
+            <p>Edit a record in the MongoDB database collection.</p>
+            <form method="POST">
+                <p>Your name: <input type="text" id="fname" name="fname" value="{{doc.name}}"><br></p>
+                <p>Message: <input type="text" id="fmessage" name="fmessage" style="height:200px" value="{{doc.message}}"><br></p>
+                <p><a href="{{ url_for('read')}}">Cancel</a> <input type="submit" name="post-btn" value="Save"></p>
+            </form>
+        </main>
+        <footer>
+            <p>
+                The source code for this example app is <a href="https://github.com/nyu-database-design/flask-mongodb-example">available on Github</a>.
+            </p>
+        </footer>
 </body>
 </html>
