--- a/templates/create.html
+++ b/templates/create.html
@@ -18,12 +18,7 @@
           <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
           <p>
             Message:
-            <input
-              type="text"
-              id="fmessage"
-              name="fmessage"
-              style="height: 200px"
-            /><br />
+            <textarea type="text" id="fmessage" name="fmessage"></textarea>
           </p>
           <p>
             <a href="{{ url_for('read')}}">Cancel</a>
