--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,7 +13,7 @@
             <p>Edit a record in the MongoDB database collection.</p>
             <form method="POST">
                 <p>Your name: <input type="text" id="fname" name="fname" value="{{doc.name}}"><br></p>
-                <p>Message: <input type="text" id="fmessage" name="fmessage" style="height:200px" value="{{doc.message}}"><br></p>
+                <p>Message: <textarea id="fmessage" name="fmessage" value="{{doc.message}}"></textarea></p>
                 <p><a href="{{ url_for('read')}}">Cancel</a> <input type="submit" name="post-btn" value="Save"></p>
             </form>
         </main>
