--- a/templates/read.html
+++ b/templates/read.html
@@ -1,34 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Example Flask App</h1>
-        </header>
-        <main>
-            <h2>Read</h2>
-            <p>This page shows information pulled from a MongoDB database collection. <a href="{{ url_for('create')}}">Click here</a> to add record to this collection.
-                    
-                {% for row in rows %}
-                <div>
-                    <hr class="solid">
-                    <p style="font-size:12px">Posted by {{row.name}} at {{ row.time }} </br>
-                        <a href="{{ url_for('edit',mongoid=row._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=row._id)}}">Delete</a> </br></p>
-                        {{ row.message }}
-                        
-                    </div>
-                    {%endfor%}
-                
-            </p>
-        </main>
-        <footer>
-            <p>
-                The source code for this example app is <a href="https://github.com/nyu-database-design/flask-mongodb-example">available on Github</a>.
-            </p>
-        </footer>
-</div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block container %}
+<h2>Read</h2>
+<p>This page shows information pulled from a MongoDB database collection. <a href="{{ url_for('create')}}">Click here</a> to add record to this collection.
+        
+    {% for row in rows %}
+    <div>
+        <hr class="solid">
+        <p class="post">
+            Posted by {{row.name}} at {{ row.time }}
+            </br>
+            <a href="{{ url_for('edit',mongoid=row._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=row._id)}}">Delete</a>
+            </br>
+        </p>
+            {{ row.message }}
+            
+    </div>
+    {%endfor%}
+</p>
+{% endblock %}
