--- a/templates/create.html
+++ b/templates/create.html
@@ -1,39 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1>Example Flask App</h1>
-      </header>
-      <main>
-        <h2>Create</h2>
-        <p>Create a new record in the MongoDB database collection.</p>
-        <form method="POST">
-          <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
-          <p>
-            Message:
-            <textarea type="text" id="fmessage" name="fmessage"></textarea>
-          </p>
-          <p>
-            <a href="{{ url_for('read')}}">Cancel</a>
-            <input type="submit" name="post-btn" value="Post" />
-          </p>
-        </form>
-      </main>
-      <footer>
-        <p>
-          The source code for this example app is
-          <a href="https://github.com/nyu-database-design/flask-mongodb-example"
-            >available on Github</a
-          >.
-        </p>
-      </footer>
-    </div>
-  </body>
-</html>
+{% extends 'base.html' %} {% block container %}
+<h2>Create</h2>
+<p>Create a new record in the MongoDB database collection.</p>
+<form method="POST">
+  <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
+  <p>
+    Message:
+    <textarea type="text" id="fmessage" name="fmessage"></textarea>
+  </p>
+  <p>
+    <a href="{{ url_for('read')}}">Cancel</a>
+    <input type="submit" name="post-btn" value="Post" />
+  </p>
+</form>
+{% endblock %}
