--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Example Flask App</h1>
-        </header>
-        <main>
-            <h2>Update</h2>
-            <p>Edit a record in the MongoDB database collection.</p>
-            <form method="POST">
-                <p>Your name: <input type="text" id="fname" name="fname" value="{{doc.name}}"><br></p>
-                <p>Message: <textarea id="fmessage" name="fmessage" value="{{doc.message}}"></textarea></p>
-                <p><a href="{{ url_for('read')}}">Cancel</a> <input type="submit" name="post-btn" value="Save"></p>
-            </form>
-        </main>
-        <footer>
-            <p>
-                The source code for this example app is <a href="https://github.com/nyu-database-design/flask-mongodb-example">available on Github</a>.
-            </p>
-        </footer>
-</body>
-</html>
+{% extends 'base.html' %} {% block container %}
+<h2>Update</h2>
+<p>Edit a record in the MongoDB database collection.</p>
+<form method="POST">
+  <p>
+    Your name:
+    <input type="text" id="fname" name="fname" value="{{doc.name}}" /><br />
+  </p>
+  <p>
+    Message:
+    <textarea id="fmessage" name="fmessage" value="{{doc.message}}"></textarea>
+  </p>
+  <p>
+    <a href="{{ url_for('read')}}">Cancel</a>
+    <input type="submit" name="post-btn" value="Save" />
+  </p>
+</form>
+{% endblock %}
