--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Example Flask App</h1>
+        <h1>Example Flask App Test</h1>
       </header>
       <main>{% block container %} {% endblock %}</main>
       <footer>
