--- a/templates/read.html
+++ b/templates/read.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 <h2>Read</h2>
-<p>This page shows information pulled from a MongoDB database collection. <a href="{{ url_for('create')}}">Click here</a> to add record to this collection.
+<p>This page shows information pulled from a MongoDB database collection.
         
     {% for row in rows %}
     <div>
