--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <h1>Example Flask App Test</h1>
         <p>
           <a href="{{ url_for('home')}}">Home</a> |
-          <a href="/read">All posts</a> |
+          <a href="{{ url_for('read')}}">All posts</a> |
           <a href="{{ url_for('create')}}">Create a post</a>
         </p>
       </header>
