--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,7 +8,7 @@
   </p>
   <p>
     Message:
-    <textarea id="fmessage" name="fmessage" value="{{doc.message}}"></textarea>
+    <textarea id="fmessage" name="fmessage">{{doc.message}}</textarea>
   </p>
   <p>
     <a href="{{ url_for('read')}}">Cancel</a>
