--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Example Flask App Test</h1>
+        <h1>Flask-MongoDB Example App</h1>
         <p>
           <a href="{{ url_for('home')}}">Home</a> |
           <a href="{{ url_for('read')}}">All posts</a> |
