--- a/templates/read.html
+++ b/templates/read.html
@@ -4,17 +4,17 @@
 <h2>Read</h2>
 <p>This page shows information pulled from a MongoDB database collection.
         
-    {% for row in rows %}
+    {% for doc in docs %}
     <div>
         <hr class="solid">
         <p class="post">
-            Posted by {{row.name}} at {{ row.created_at.strftime("%H:%M on %d %B %Y") }}
+            Posted by {{doc.name}} at {{ doc.created_at.strftime("%H:%M on %d %B %Y") }}
             </br>
-            <a href="{{ url_for('edit',mongoid=row._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=row._id)}}">Delete</a>
+            <a href="{{ url_for('edit',mongoid=doc._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=doc._id)}}">Delete</a>
             </br>
         </p>
         <p>
-            {{ row.message }}
+            {{ doc.message }}
         </p>
             
     </div>
