--- a/templates/read.html
+++ b/templates/read.html
@@ -8,7 +8,7 @@
     <div>
         <hr class="solid">
         <p class="post">
-            Posted by {{doc.name}} at {{ doc.updated_at.strftime("%H:%M on %d %B %Y") }}
+            Posted by {{doc.name}} at {{ doc.created_at.strftime("%H:%M on %d %B %Y") }}
             </br>
             <a href="{{ url_for('edit',mongoid=doc._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=doc._id)}}">Delete</a>
             </br>
